--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -7,5 +7,5 @@ html {
 /* 声明字体 */
 @font-face {
     font-family: electronicFont;
-    src: url(./assets/DS-DIGIT.TTF);
+    src: url(./assets/font/DS-DIGIT.TTF);
 }
